Update body styles for full viewport width and height, and prevent overflow

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 }
 
 body {
+  width: 100dvw;
+  height: 100vh;
   padding: 0rem 1rem;
 
   font-family:
@@ -24,6 +26,7 @@ body {
 
   color: white;
   background: #121212;
+  overflow: hidden;
 }
 
 .container {
